# msort

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo_publish.yml
src/: args.rs  fs.rs  main.rs  mover.rs  resolver.rs
src/generator/: media.rs  media_type.rs  mod.rs  plex.rs
src/macos/: bind.rs  fs.rs  mod.rs
src/openai/: client.rs  model.rs
src/opensubtitles/: client.rs  hasher.rs  mod.rs  model.rs
src/resolvers/: mod.rs  multiresolver.rs  openai.rs  opensubtitles.rs
src/windows/: fs.rs  mod.rs
