[package]
name = "sublee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
