[package]
name = "msort"
license = "MIT"
description = "A command line application to sort media files"
readme = "README.md"
authors = ["Tomáš Pavlič <tomaspavlic@gmail.com>"]
homepage = "https://github.com/tomaspavlic/msort"
repository = "https://github.com/tomaspavlic/msort"
keywords = ["plex", "folders", "sorting", "folder-structure"]
categories = ["command-line-utilities"]
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env", "cargo"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
indicatif = "0.17.9"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
widestring = "1.1.0"
winapi = { version = "0.3.9", features = ["winbase"] }
